tests/corpus/negative/req09/send_ref_across_actor.mvl
// corpus:expect-fail
// expect-requirement: 9
// Scenario: a ref-capability parameter is passed to channel.send() which requires
//           sendable (iso or val) capability. ref values cannot cross actor boundaries.
// Triggers: CheckError::CapabilityViolation (req9)

type Payload = struct {
    id: Int,
    data: String,
}

fn dispatch(channel: Channel, ref data: Payload) -> Unit {
    // BUG: `data` is `ref` (aliased, not sendable) — cannot send across actor boundary.
    channel.send(data);
}

fn main() -> Unit ! Console {
    println("done");
}
